syntax = "proto3";
package cosmwasm.wasm.v1;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "cosmwasm/wasm/v1/types.proto";

option go_package = "github.com/bitbadges/bitbadgeschain/x/wasm/types";

// MsgUpdateParams is the MsgUpdateParams request type.
// Since: 0.40
message MsgUpdateParams {
  option (amino.name) = "wasm/MsgUpdateParams";
  option (cosmos.msg.v1.signer) = "authority";

  // Authority is the address of the governance account.
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];

  // params defines the x/wasm parameters to update.
  // NOTE: All parameters must be supplied.
  Params params = 2 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
// Since: 0.40
message MsgUpdateParamsResponse {}
