syntax = "proto3";
package cosmwasm.wasm.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/bitbadges/bitbadgeschain/x/wasm/types";

// AccessType permission types
enum AccessType {
  option (gogoproto.goproto_enum_prefix) = false;
  option (gogoproto.goproto_enum_stringer) = true;

  // AccessTypeUnspecified placeholder for empty value
  ACCESS_TYPE_UNSPECIFIED = 0 [(gogoproto.enumvalue_customname) = "AccessTypeUnspecified"];
  // AccessTypeNobody forbidden
  ACCESS_TYPE_NOBODY = 1 [(gogoproto.enumvalue_customname) = "AccessTypeNobody"];
  // AccessTypeEverybody unrestricted
  ACCESS_TYPE_EVERYBODY = 3 [(gogoproto.enumvalue_customname) = "AccessTypeEverybody"];
  // AccessTypeAnyOfAddresses allow any of the addresses
  ACCESS_TYPE_ANY_OF_ADDRESSES = 4 [(gogoproto.enumvalue_customname) = "AccessTypeAnyOfAddresses"];

  reserved 2;
}

// AccessConfig access control type.
message AccessConfig {
  option (gogoproto.goproto_stringer) = true;

  // Permission type
  AccessType permission = 1 [(gogoproto.moretags) = "yaml:\"permission\""];

  // Addresses (only used with AccessTypeAnyOfAddresses)
  repeated string addresses = 3 [(gogoproto.moretags) = "yaml:\"addresses\""];

  reserved 2;
}

// Params defines the set of wasm parameters.
message Params {
  option (gogoproto.goproto_stringer) = true;

  // Code upload access configuration
  AccessConfig code_upload_access = 1 [
    (gogoproto.nullable) = false,
    (gogoproto.moretags) = "yaml:\"code_upload_access\""
  ];

  // Default instantiate permission
  AccessType instantiate_default_permission = 2 [
    (gogoproto.moretags) = "yaml:\"instantiate_default_permission\""
  ];
}
